resources/css/styles.css
html {
  font-size: 16px;
}
body{
  width: auto;
  display: flex;
  justify-content: center;
  flex-direction: column;
  font-family: 'Roboto', sans-serif;

}
a {
  text-decoration: none;
}

section.banner {
  background-color: #D8D8D8;
}
header {
  background-color: white;
  height: 4rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  margin: auto 1.5rem auto 1.5rem;
}
header .brand {
 height: 2rem;
 display: flex;
 align-items: center;
}
.brand img {
  height: 40px;
  width:auto;
}

.logotype {
  font-style: bold;
  color: black;
  font-family: inherit;
  font-size: 2rem;
}
.logotype2 {
  color: #9B9B9B;
  font-style: 200;
  font-family: inherit;
  font-size: 2rem;
}

.header-menu li {
  display: inline-flex;
  list-style: none;
}
nav ul li {
  display: flex;
  justify-content: space-between;
  align-content: center;

}

nav ul li a {
  font-size: 20px;
  text-decoration: none;
  color: black;
  margin: 0 1rem 0 0;
}

.nav-mobile {
  display: none;
}
.nav-mobile img {
  height: auto;
}

section {
  display: flex;
  align-items: center;
}

.banner-left img {
  width: 96%;
  height: auto;
}
section .banner-left {
  width: 60%;
  height: auto;
  padding-top: .5rem;
  padding-bottom: .5rem;
  margin: 1.5rem 2rem 1.5rem 1.5rem;

}
.cta {
  display: flex;
  flex-direction: column;
  font-family: inherit;
  font-size: 1.5rem;
  justify-content: space-between;

}
.btn {
  margin: 1.5rem auto 1.5rem auto;
  background-color:#4A4A4A;
  max-width: 100%;
  padding-right: 1rem;
  text-align: center;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.btn span{
  text-align: center;
  color: #ffffff;
}
.btn:hover {
  background-color: green;
}

.cta h1 {
  font-weight: bold;
  font-size: 2.7rem;
  line-height: 1.2;
}
.cta h3 {
 padding: 2rem 0 .5rem 0;
 line-height: 1.5;
 font-size: 1.5rem;
}

.section-type-2 {
 display: flex;
 align-items: flex-start;
 justify-content: center;
}

.featured img {
  width: 100%;
  height: auto;
}

.section-type-2 .featured {
  width: 60%;
  height: auto;
  margin: 2rem 1.5rem 0 1.5rem;
}
.featured-quote {
  margin: 32px 24px 32px 24px;
}

.featured-quote h2 {
 font-size: 2.5rem;
 font-weight: 700;
 margin-bottom: 1.5rem;
}
.featured-quote p {
  font-size: 1.2rem;
  line-height: 1.4;
}
.featured-quote h5{
  margin-top: 2rem;
}
.article:hover {
  background-color: lightgray;
}
.article {
  display: flex;
  align-items: center;
  padding: 1rem;
  border-bottom: 1.5px solid lightgray;
  max-width: 100%;
}


.section-type-2 .articles {
  display: flex;
  flex-direction: column;
  width: 40%;
  padding-top: 1rem;
  padding-bottom: 5.5rem;
}

.articles img {
 width: 35%;
 height: auto;
 padding-right: 1rem;
}

.section-type-2 .article-title {
 max-width: 65%;
 align-content: center;
}
.article-title {
  max-width: 65%;
  display: flex;
  flex-direction: column;

}
.article-title h3 {
  margin-bottom: .5rem;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1.3;
}
.sub-heading {
  margin-bottom: .5rem;
  line-height: 1.3;
}

.section3 {
 display: flex;
 flex-direction: column;
 max-width: 100%;
 background-color: #D8D8D8;

}
.title h1 {
  font-size: 3rem;
  text-align: center;
  padding-top: 2rem;
  font-weight: bold;
}
.courses-menu {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin-left: 72px;
  margin-right: 40px;
  margin-bottom: 32px;

}

.course{
  display: flex;
  flex-direction: column;
  margin-top: 2rem;
  margin-right:2rem;
  background-color: white;
  width: 30%
}

.course-image img {
  height: auto;
  width: 100%;
}
.details {
display: flex;
flex-direction: column;
margin: 16px;
}
.details h3 {
  font-weight: bold;
  font-size: 1.4rem;
  color: #545454;
}
.details span {
color: #818181;
padding-top: 8px
}

.courses-heading {
 font-weight: lighter;
}

.summary {
  line-height: 1.5;

}

.featured video {
  width: 100%;
  height: auto;
}
.featured-info {
  margin: 24px 24px 32px 24px;

}
.featured-info h3 {
  font-size: 1.8rem;
  padding-bottom: 8px;

}
.featured-info p {
  padding-top: 8px;
  line-height: 1.5;
}

.section4 {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.section-type-2 video {
  margin: 0;
}

.section4 .videos {
  display: flex;
  flex-direction: column;
  width: 40%;
  padding-top: 1rem;
  padding-bottom: 5.5rem;
}

.section4 .video-title {
 width: 65%;
 align-content: center;
}

.videos img {
 width: 35%;
 height: auto;
 padding-right: 1rem;
}

.video-list:hover {
  background-color: lightgray;
}
.video-list {
  display: flex;
  align-items: center;
  padding: 1rem;
  border-bottom: 1.5px solid lightgray;
}

.video-title {
  width: 65%;
  display: flex;
  flex-direction: column;

}
.video-title h3 {
  margin-bottom: .5rem;
  font-weight: 600;
  font-size: 1.4rem;
  line-height: 1.3;
}

footer {
  border-top: 1px solid lightgray;
  background-color: white;
  height: 4rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  margin: auto 1.5rem auto 1.5rem;
}

footer copyright {

}

.footer-menu li {
  display: inline-flex;
  list-style: none;
}

.footer-menu a {
font-size: 1rem;
}


.responsive-nav {
display: none;
}

.responsive-img {
display: none;
}
.responsive-video {
display: none;
}

@media screen and (max-width: 780px){
  header {
    display: none;
  }

  section:nth-child(odd) {
    background-color: #FFFFFF;
  }

.responsive-nav{
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 64px;

  }

section.banner {
display: flex;
flex-direction: column;
flex-wrap: wrap;
align-items: flex-start;
background-color: #D8D8D8;
}

section .banner-left {
  width: 100%;
  margin: 0px;
  padding: 0px;
}
.banner-left img {
  width: 100%;
}

.cta {
  margin: 2rem 0 2rem 1rem;
  font-size: 1rem;
  max-width: 100%;
}
.cta-text {
  width: 100%;
}
.cta-text h1 {
  font-weight: bold;
  font-size: 2.7rem;
  line-height: 1.2;
}
.cta-text h3 {
 padding: 2rem 0 1rem 0;
 line-height: 1.5;
 font-size:1rem;
}
.btn {
  background-color:#4A4A4A;
  max-width: 100%;
  padding-right: 16px;
  height: 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

}
.btn span{
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  text-align: center;
  color: #ffffff;
}


/* blog aricles  */

#left-content {
  display: none;
}
.section-type-2 .articles {
max-width: 100%;
padding-bottom: 0;
padding-top: 0;
}
.articles img {
    display: none;
}

.article {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  max-width: 100%;
  margin: 0;
  padding-right: 1rem;
  padding-bottom: 2rem;
}

.article img {
   height: auto;
   padding-right: 0;

}

.articles .responsive-img {
    display: flex;
    align-items: center;
    width: 100%;
    margin: 0;
}


.section-type-2 .articles {
    width: 100%;
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    margin: 0;
}

.article-title {
    display: flex;
    flex-wrap: nowrap;
    align-items: flex-start;
    margin-left: 16px;
    width: 100%;
    margin-bottom: 1rem;

}
.article-title h3 {
  padding-top: 1.5rem;
  padding-bottom: 0;
  margin: 0;
  font-size: 1.5rem;
}

span.sub-heading {
  padding-top: .5rem;
  margin-bottom: .5rem;
  line-height: 2;
  font-size: .8rem;
  max-width: 100%;
}
 /* course offerings */

.section3 {
    margin-top: 0;
    padding-top: 0;
    margin-bottom: 32px;
}
.title h1 {
  padding-top: 2rem;
  padding-bottom: 1rem;
  font-size: 2.3rem;
}
.courses-menu {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0;
    padding-top: 0;
    padding-bottom: 2rem;
}

.course-image img {
    display: none;
}

.course {
  background-color: white;
  margin: 4px 16px 8px 16px;
  width: -webkit-fill-available;
}

.details {
  margin: 0px;
  background: #D8D8D8;
  width: 100%;
}
.details h3 {
  font-weight: lighter;
  padding-left: 1rem;
  padding-bottom: 1.5rem;
  padding-top: 1rem;
}

.summary, .courses-heading {
    display: none;
}
/* video section */
.section4 .title h1 {
  padding-top: 0;
  padding-bottom: 1rem;
  font-size: 2.3rem;
}
.video-list {
display: none;
}
.featured-info {
  display: none;
}
.featured {
  display: none;
}

.responsive-video {
display: flex;
margin-top: 0rem;
margin-bottom: 1.5rem;
}
.section4 {
  padding-top: 2rem;
  padding-bottom: 1.5rem;
}
footer{
  border-top: 0px solid lightgray;
  margin: 16px;
  font-size: .8rem;
  height: auto;
}
.footer-menu {
  display: none;
}

}

